--- a/index.html
+++ b/index.html
@@ -41,9 +41,56 @@
 </head>
 
 <body>
+	<script>
+		function getParameterByName(name, url = window.location.href) {
+			name = name.replace(/[\[\]]/g, '\\$&');
+			var regex = new RegExp('[?&]' + name + '(=([^&#]*)|&|#|$)'),
+				results = regex.exec(url);
+			if (!results) return null;
+			if (!results[2]) return '';
+			return decodeURIComponent(results[2].replace(/\+/g, ' '));
+		}
+
+		function getCookieByName(name) {
+			var cookie = `; ${document.cookie}`
+			var parts = cookie.split(`; ${name}=`);
+			var res = ""
+
+			if (parts.length === 2) res = parts.pop().split(';').shift();
+			return res;
+		}
+
+		function redirect(){
+			VIVE_AVATAR_DOMAIN = "avatar.viverse.com";
+			
+			if(window.location.hostname == "world-dev.viverse.com"){
+				VIVE_AVATAR_DOMAIN = "vr-viverse-web.htcwowdev.com";
+			}
+			else if (window.location.hostname == 'world-stage.viverse.com'){
+				VIVE_AVATAR_DOMAIN = 'avatar-stage.viverse.com';
+			}
+			signInUrl = `https://${VIVE_AVATAR_DOMAIN}/api/login?callback_url=${window.location.href}`;
+			window.location = `https://${VIVE_AVATAR_DOMAIN}/avatar/select-your-avatar?version=v2&redirect_url=${encodeURIComponent(window.location.href)}&sign_in_redirect_url=${encodeURIComponent(signInUrl)}`;
+		}
+
+		cookieKey = '';
+		if(window.location.hostname == "world.viverse.com"){
+			cookieKey = '_htc_access_token_production';
+		}
+		else if (window.location.hostname == 'world-stage.viverse.com'){
+			cookieKey = '_htc_access_token_stage';
+		}
+		else {
+			cookieKey = '_htc_access_token_production';
+		}
+		if(!getCookieByName(cookieKey) && !getParameterByName('avatar_url')){
+			redirect();
+		}
+	</script>
 	<div id="gameContainer">
 		<canvas id="unity-canvas" data-pixel-art=""></canvas>
 		<script src="Build/Build.loader.js"></script>
+		<script src="https://avatar.viverse.com/static-misc/avatar-js-sdk/1.1.1/Avatar-SDK.js"></script>
 		<script>
 			var canvas = document.querySelector("#unity-canvas");
 			var config = {
