--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@
 	</script>
 	<div id="gameContainer">
 		<canvas id="unity-canvas" data-pixel-art=""></canvas>
-		<script src="Build/Build.loader.js"></script>
+		<script src="Build/jerryliuhtc.github.io.loader.js"></script>
 		<script src="https://avatar.viverse.com/static-misc/avatar-js-sdk/1.1.1/Avatar-SDK.js"></script>
 		<script>
 			var canvas = document.querySelector("#unity-canvas");
 			var config = {
-				dataUrl: "Build/Build.data.unityweb",
-				frameworkUrl: "Build/Build.framework.js.unityweb",
-				codeUrl: "Build/Build.wasm.unityweb",
+				dataUrl: "Build/jerryliuhtc.github.io.data.unityweb",
+				frameworkUrl: "Build/jerryliuhtc.github.io.framework.js.unityweb",
+				codeUrl: "Build/jerryliuhtc.github.io.wasm.unityweb",
 				streamingAssetsUrl: "StreamingAssets",
 				companyName: "DefaultCompany",
 				productName: "football",
